Add new tests for AuthorityServiceImpl