@@ -8,13 +8,17 @@ import static greencity.ModelUtils.getPositions;
 import static greencity.ModelUtils.getUser;
 import static greencity.ModelUtils.getUserEmployeeAuthorityDto;
 import greencity.dto.EmployeePositionsDto;
+import greencity.dto.authorities.AuthorityCategoryDto;
+import greencity.dto.authorities.AuthorityDto;
 import greencity.dto.position.PositionDto;
 import greencity.entity.Authority;
+import greencity.entity.AuthorityCategory;
 import greencity.entity.Position;
 import greencity.entity.User;
 import greencity.enums.Role;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
+import greencity.repository.AuthorityCategoryRepo;
 import greencity.repository.AuthorityRepo;
 import greencity.repository.PositionRepo;
 import greencity.repository.UserRepo;
@@ -22,7 +26,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -36,6 +39,7 @@ import static org.mockito.Mockito.when;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.modelmapper.ModelMapper;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -51,6 +55,10 @@ class AuthorityServiceImplTest {
     private PositionRepo positionRepo;
     @Mock
     private Authentication auth;
+    @Mock
+    private ModelMapper modelMapper;
+    @Mock
+    private AuthorityCategoryRepo authorityCategoryRepo;
     @InjectMocks
     private AuthorityServiceImpl authorityService;
 
@@ -82,8 +90,7 @@ class AuthorityServiceImplTest {
     void updateEmployeesAuthoritiesTest() {
         User employee = createEmployee();
         List<Authority> authority = List.of(getAuthority());
-        List<String> authoritiesName = authority.stream().map(Authority::getName)
-            .collect(Collectors.toList());
+        List<String> authoritiesName = authority.stream().map(Authority::getName).toList();
 
         when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
         when(authorityRepo.findAuthoritiesByNames(authoritiesName)).thenReturn(authority);
@@ -150,5 +157,90 @@ class AuthorityServiceImplTest {
     void updateAuthoritiesToRelatedPositionsThrowsNotFoundExceptionTest() {
         var dto = new EmployeePositionsDto();
         assertThrows(UsernameNotFoundException.class, () -> authorityService.updateAuthoritiesToRelatedPositions(dto));
+    }
+
+    @Test
+    void getEmployeesAuthoritiesGroupedByCategoriesTest() {
+        User employee = createEmployee();
+        Authority authority = getAuthority();
+        AuthorityCategoryDto categoryDto = AuthorityCategoryDto.builder()
+            .id(authority.getCategory().getId())
+            .nameEn(authority.getCategory().getNameEn())
+            .nameUk(authority.getCategory().getNameUk())
+            .build();
+        AuthorityDto authorityDto = AuthorityDto.builder()
+            .name(authority.getName())
+            .descriptionEn(authority.getDescriptionEn())
+            .descriptionUk(authority.getDescriptionUk())
+            .build();
+
+        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
+        when(authorityRepo.getAuthoritiesByEmployeeId(employee.getId()))
+            .thenReturn(Set.of(authority.getName()));
+        when(authorityRepo.findAll()).thenReturn(List.of(authority));
+
+        when(modelMapper.map(authority, AuthorityDto.class)).thenReturn(authorityDto);
+        when(modelMapper.map(authority.getCategory(), AuthorityCategoryDto.class)).thenReturn(categoryDto);
+
+        List<AuthorityCategoryDto> result = authorityService.getEmployeesAuthoritiesGroupedByCategories(TEST_EMAIL);
+
+        assertEquals(1, result.size());
+        assertEquals(categoryDto.getNameEn(), result.getFirst().getNameEn());
+        assertEquals(1, result.getFirst().getAuthorities().size());
+        assertEquals(authorityDto.getName(), result.getFirst().getAuthorities().getFirst().getName());
+
+        verify(userRepo).findByEmail(TEST_EMAIL);
+        verify(authorityRepo).getAuthoritiesByEmployeeId(employee.getId());
+    }
+
+    @Test
+    void getAuthoritiesByCategoryTest() {
+        Long categoryId = 1L;
+        Authority authority = getAuthority();
+        AuthorityDto authorityDto = AuthorityDto.builder()
+            .name(authority.getName())
+            .descriptionEn(authority.getDescriptionEn())
+            .descriptionUk(authority.getDescriptionUk())
+            .build();
+
+        when(authorityRepo.findAllByCategoryId(categoryId)).thenReturn(List.of(authority));
+        when(modelMapper.map(authority, AuthorityDto.class)).thenReturn(authorityDto);
+
+        List<AuthorityDto> result = authorityService.getAuthoritiesByCategory(categoryId);
+
+        assertEquals(1, result.size());
+        assertEquals(authority.getName(), result.getFirst().getName());
+        assertEquals(authority.getDescriptionEn(), result.getFirst().getDescriptionEn());
+        assertEquals(authority.getDescriptionUk(), result.getFirst().getDescriptionUk());
+
+        verify(authorityRepo).findAllByCategoryId(categoryId);
+        verify(modelMapper).map(authority, AuthorityDto.class);
+    }
+
+    @Test
+    void getAllAuthorityCategoriesTest() {
+        AuthorityCategory category = AuthorityCategory.builder()
+            .id(1L)
+            .nameEn("Clients")
+            .nameUk("Клієнти")
+            .build();
+
+        AuthorityCategoryDto categoryDto = AuthorityCategoryDto.builder()
+            .id(1L)
+            .nameEn("Clients")
+            .nameUk("Клієнти")
+            .build();
+
+        when(authorityCategoryRepo.findAll()).thenReturn(List.of(category));
+        when(modelMapper.map(category, AuthorityCategoryDto.class)).thenReturn(categoryDto);
+
+        List<AuthorityCategoryDto> result = authorityService.getAllAuthorityCategories();
+
+        assertEquals(1, result.size());
+        assertEquals("Clients", result.getFirst().getNameEn());
+        assertEquals("Клієнти", result.getFirst().getNameUk());
+
+        verify(authorityCategoryRepo).findAll();
+        verify(modelMapper).map(category, AuthorityCategoryDto.class);
     }
 }
